# nbnhhsh_bot

./: Cargo.toml  Dockerfile  README.md  bot.js
.gitea/workflows/: release.yml  test.yml
src/: main.rs  nbnhhsh.rs
